# poc-monorepo

./: .dockerignore  .env.dist  .env.docker  .env.planet.dist  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  docker-compose.bdd.yaml  docker-compose.yaml  justfile
.cargo/: config.toml
.github/workflows/: rust.yml
civilisation/admin/: Cargo.toml
civilisation/admin/src/: lib.rs
civilisation/client/: Cargo.toml
civilisation/client/src/: admin.rs  auth.rs  input.rs  lib.rs  state.rs
civilisation/client/src/admin/: component.rs  mod.rs  timer.rs
civilisation/server/: Cargo.toml
civilisation/server/src/: main.rs
civilisation/server/src/consumer/: auth.rs  planet.rs
civilisation/server/src/consumer/civilisation/: auth.rs  mod.rs
civilisation/server/src/web/: admin.rs  base.rs  civilisation.rs  mod.rs
civilisation/server/templates/: index.html.tera
civilisation/shared/: Cargo.toml
civilisation/shared/src/: command.rs  dto.rs  error.rs  event.rs  lib.rs
civilisation/state/: Cargo.toml
civilisation/state/src/: lib.rs
client/: Cargo.toml
client/account/: Cargo.toml
client/account/src/: lib.rs  state.rs
client/civilisation/: Cargo.toml
client/civilisation/src/: auth.rs  input.rs  lib.rs  state.rs
client/horfimbor-client/: Cargo.toml
client/horfimbor-client/src/: input.rs  lib.rs  state.rs
client/planet/: Cargo.toml
client/planet/src/: input.rs  state.rs
client/src/: auth.rs  input.rs  lib.rs  state.rs
client/src/account/: input.rs  state.rs
client/src/planet/: input.rs  state.rs
common/: Cargo.toml
common/src/: account.rs  lib.rs
doc/: game-rules.md
planet/admin/: Cargo.toml
planet/admin/src/: lib.rs
planet/client/: Cargo.toml
planet/client/src/: input.rs  lib.rs
planet/server/: Cargo.toml
planet/server/src/: main.rs
planet/server/src/consumer/: civilisation.rs  civilisation_admin.rs  mod.rs
planet/server/src/consumer/planet/: account.rs
planet/server/src/web/: mod.rs  planet.rs
planet/shared/: Cargo.toml
planet/shared/src/: event.rs
planet/state/: Cargo.toml
public/: Cargo.toml
public/src/: account.rs  civilisation.rs  lib.rs  planet.rs
server/: Cargo.toml
server/account/: Cargo.toml
server/account/src/: main.rs
server/account/src/consumer/account/: auth.rs  planet.rs
server/account/src/web/: account.rs  mod.rs
server/civilisation/: Cargo.toml
server/civilisation/src/consumer/: mod.rs
server/civilisation/src/consumer/civilisation/: auth.rs  planet.rs
server/civilisation/src/web/: civilisation.rs  mod.rs
server/planet/: Cargo.toml
server/planet/src/: main.rs
server/planet/src/consumer/planet/: account.rs
server/planet/src/web/: mod.rs  planet.rs
server/planet/templates/: index.html.tera
server/src/: main.rs
server/src/consumer/: account.rs  delay.rs  dto.rs  mod.rs  state.rs
server/src/consumer/account/: auth.rs  planet.rs
server/src/consumer/planet/: account.rs
server/src/web/: account.rs  base.rs  controller.rs  mod.rs
server/templates/: data.html.tera  index.html.tera  template_render.tera
shared/: Cargo.toml
shared/account/: Cargo.toml
shared/account/src/: command.rs  dto.rs  error.rs  event.rs  lib.rs
shared/civilisation/: Cargo.toml
shared/civilisation/src/: command.rs  error.rs  event.rs  lib.rs
shared/planet/: Cargo.toml
shared/planet/src/: command.rs  dto.rs  error.rs  event.rs  lib.rs
shared/src/: command.rs  dto.rs  error.rs  event.rs  lib.rs
state/: Cargo.toml
state/account/: Cargo.toml
state/account/src/: lib.rs
state/civilisation/: Cargo.toml
state/civilisation/src/: lib.rs
state/planet/: Cargo.toml
state/planet/src/: lib.rs
state/src/: lib.rs
state/tests/: mono-state-test.rs  template-state-test.rs
state/tests/book/: add.feature  delay.feature  reset.feature
