[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
    "state"
]

[workspace.dependencies]
#horfimbor-eventsource = {path = "../horfimbor-engine/horfimbor-eventsource"}
#horfimbor-jwt = { path = "../horfimbor-engine/horfimbor-jwt" }
horfimbor-eventsource = "0.3.5"
horfimbor-jwt = "0.1.2"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
redis= { version = "0.32.0", features = ["tokio-rustls-comp"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
kurrentdb = "1.0.0-alpha.4"
uuid = { version = "1.1", features = ["v4", "serde"] }
dotenvy = "0.15"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
