[package]
name = "template-state"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horfimbor-eventsource.workspace = true
serde.workspace = true
template-shared = { path = "../shared", features = ["server"] }



[dev-dependencies]
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
cucumber = { version = "0.21.1" }
anyhow.workspace = true

[[test]]
name = "template-state-test" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest


[lints]
workspace = true
