[package]
name = "mono-civilisation-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horfimbor-eventsource.workspace = true
horfimbor-jwt = {workspace = true, features = ["server"]}
public-account-event.workspace = true
clap.workspace = true
serde.workspace = true
kurrentdb.workspace = true
uuid.workspace = true
thiserror.workspace = true
civilisation-shared = { path = "../shared", features = ["server"] }
civilisation-state = { path = "../state" }
civilisation-admin = { path = "../admin", features = ["server"] }
public-mono = {path = "../../public" }
redis= {  workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
rocket = { workspace=true, features = ["json"] }
rocket_cors = "0.6"
serde_json.workspace = true
anyhow.workspace = true
chrono = "0.4"
dotenvy.workspace = true
tokio = "1.43"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3"
futures = "0.3"



[dependencies.rocket_dyn_templates]
version = "0.2"
features = ["tera"]

[build-dependencies]
built = "0.7"

[lints]
workspace = true
