[package]
name = "civilisation-state"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horfimbor-eventsource.workspace = true
serde.workspace = true
civilisation-shared = { path = "../../shared/civilisation", features = ["server"] }
public-mono = {path = "../../public", features = ["server"]}
garde.workspace = true

[dev-dependencies]
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
cucumber = { version = "0.21.1" }
anyhow.workspace = true


[lints]
workspace = true
